kubernetes-networks/canary/web-ingress-canary.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: stage
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: always
spec:
  rules:
  - host: lb-ingress.local
    http:
      paths:
      - path: /web
        backend:
          serviceName: web-svc-canary
          servicePort: 8000
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary-by-header: never
spec:
  rules:
  - host: lb-ingress.local
    http:
      paths:
      - path: /web
        backend:
          serviceName: web-svc-prod
          servicePort: 8000
